<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="visible">

        <TextView
            android:id="@+id/selected_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>

        <Button
            android:id="@+id/select_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select date"/>

        <Button
            android:id="@+id/download_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Download Data"/>

        <Button
            android:id="@+id/load_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Load Data"/>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>